--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
                 Obviously, none of us can understand what pigeons are saying, so we'll just make up some subtitles! Create your own time stamps and invent your own dialog!
             </p>
             <!-- TODO: Put the pigeons in love MP4 video here-->
+            <video controls>
+                <source src="assets/videos/pigeons-in-love.mp4" type="video/mp4">
+                <track
+                    src="assets/text-tracks/pigeon.vtt"
+                    kind="subtitles"
+                    srclang="English"
+                    label="English Subtitles" />
+
+                <track
+                    src="assets/text-tracks/pigeonFrench.vtt"
+                    kind="subtitles"
+                    srclang="French"
+                    label="French Subtitles" />
+            </video>
             <!-- This video should have controls and two track tags (for example, for English AND French subtitles) -->
         </div>
     </main>
